wip: set body as bytes when creating a response Objects
- need to configure for other handlers that return a body (EchoHandler)